# 1C_MCP

./: .gitignore  1C_MCP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIX.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SYSTEM_PROMPT.md  TODOLIST.md  alembic.ini  mcp-1c-web.service  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  development.md  examples.md  runtime-setup.md  troubleshooting.md
docs/setup/: claude-desktop.md  postgres-backend.md
extensions/mcpbridge/: CommonModuleMCPBridge.bsl  HTTPServiceModule.bsl  README.md
migrations/: env.py
migrations/versions/: 0001_baseline.py
scripts/: run_pipeline.py
src/mcp_1c/: __init__.py  __main__.py  config.py  server.py  web.py
src/mcp_1c/auth/: __init__.py  context.py  scopes.py  token.py
src/mcp_1c/domain/: __init__.py  code.py  composition.py  embedding.py  extension.py  form.py  graph.py  metadata.py  mxl.py  platform.py  templates.py
src/mcp_1c/engines/: __init__.py  workspace.py
src/mcp_1c/engines/bsp/: __init__.py  engine.py
src/mcp_1c/engines/bsp/data/: common_modules.json  hooks.json  patterns.json  versions.json
src/mcp_1c/engines/code/: __init__.py  bsl_ls.py  dependencies.py  engine.py  parser.py  reader.py
src/mcp_1c/engines/code/lsp/: __init__.py  adapter.py  cache.py  client.py  protocol.py  server_manager.py
src/mcp_1c/engines/composition/: __init__.py  engine.py  parser.py
src/mcp_1c/engines/embeddings/: __init__.py  chunking.py  client.py  engine.py  local_client.py  storage.py
src/mcp_1c/engines/extensions/: __init__.py  engine.py  parser.py
src/mcp_1c/engines/forms/: __init__.py  engine.py  parser.py
src/mcp_1c/engines/knowledge_graph/: __init__.py  engine.py  storage.py
src/mcp_1c/engines/metadata/: __init__.py  cache.py  engine.py  indexer.py  parser.py  watcher.py
src/mcp_1c/engines/mxl/: __init__.py  engine.py  generator.py  parser.py
src/mcp_1c/engines/platform/: __init__.py  engine.py
src/mcp_1c/engines/platform/data/: events.json  global_context.json  types.json
src/mcp_1c/engines/profile/: __init__.py  detector.py  loader.py  model.py
src/mcp_1c/engines/runtime/: __init__.py  client.py  engine.py
src/mcp_1c/engines/smart/: __init__.py  context.py  generator.py  movement_builder.py  print_builder.py  query_builder.py  type_resolver.py
src/mcp_1c/engines/storage/: __init__.py  postgres.py  protocol.py  sqlite.py
src/mcp_1c/engines/templates/: __init__.py  engine.py  generator.py  loader.py  query_parser.py
src/mcp_1c/engines/templates/data/: api.json  handlers.json  movements.json  print_forms.json  queries.json
src/mcp_1c/engines/validation/: __init__.py  loop.py
src/mcp_1c/prompts/: __init__.py  agents.py  base.py  registry.py  skills.py
src/mcp_1c/scripts/: install_bsl_ls.py
src/mcp_1c/tools/: __init__.py  analysis_tools.py  base.py  bsp_tools.py  code_tools.py  composition_tools.py  config_tools.py  constants.py  diff_tools.py  embedding_tools.py  extension_tools.py  form_tools.py  generate_tools.py  graph_tools.py  metadata_tools.py  pattern_tools.py  platform_tools.py  query_tools.py  registry.py  runtime_tools.py  smart_tools.py  template_tools.py
src/mcp_1c/utils/: __init__.py  audit.py  helpers.py  logger.py  lru_cache.py  observability.py  profiler.py  xml.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_full_pipeline.py  test_qga_pipeline.py  test_qga_tools.py  test_smoke.py
tests/integration/: test_code_engine.py  test_engines.py  test_lsp_real.py  test_metadata_engine.py  test_postgres_skeleton.py
tests/performance/: test_performance.py
tests/property/: test_bsl_parser_invariants.py
tests/security/: test_security.py
tests/unit/: test_agents.py  test_audit.py  test_auth.py  test_base_tool_audit.py  test_base_tool_scope.py  test_bsl_ls.py  test_bsl_parser.py  test_bsp_engine.py  test_chunking.py  test_code_engine_lsp_methods.py  test_composition_parser.py  test_config_tools.py  test_dependencies.py  test_diff_tools.py  test_edt_parser.py  test_error_paths.py  test_extended_parser.py  test_extension_parser.py  test_form_parser.py  test_generate_tools.py  test_generation_tools.py  test_indexer.py  test_install_bsl_ls.py  test_kg_code_edges.py  test_kg_extension_edges.py  test_kg_lsp_resolution.py  test_lsp_adapter.py  test_lsp_cache.py  test_lsp_client.py  test_lsp_server_manager.py  test_mxl_parser.py  test_observability.py  test_overlay_config.py  test_overlay_indexing.py  test_parser.py  test_platform_engine.py  test_profile_detector.py  test_profile_model_loader.py  test_prompts_consistency.py  test_registry_scopes.py  (+12 more)
