[project]
name = "mcp-1c"
version = "0.1.0"
description = "MCP Server for 1C:Enterprise platform - metadata analysis and code generation"
authors = [{ name = "MCP-1C Team", email = "mcp-1c@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "1c",
    "enterprise",
    "metadata",
    "code-analysis",
    "bsl",
    "claude",
    "ai",
    "code-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "watchfiles>=0.21.0",
    "lxml>=5.0.0",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/mcp-1c"
Documentation = "https://github.com/your-org/mcp-1c#readme"
Repository = "https://github.com/your-org/mcp-1c.git"
Issues = "https://github.com/your-org/mcp-1c/issues"
Changelog = "https://github.com/your-org/mcp-1c/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
]

[project.scripts]
mcp-1c = "mcp_1c.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_1c"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
