[project]
name = "mcp-1c"
version = "0.2.0"
description = "MCP Server for 1C:Enterprise — metadata indexing, BSL analysis, code generation, semantic search and metadata knowledge graph"
authors = [{ name = "Farkhat Faragj", email = "zfaragj@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "1c",
    "enterprise",
    "metadata",
    "code-analysis",
    "bsl",
    "claude",
    "ai",
    "code-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "sqlite-vec>=0.1.9",
    "watchfiles>=0.21.0",
    "lxml>=5.0.0",
    "aiofiles>=23.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "sse-starlette>=1.8.0",
    "charset-normalizer>=3.0.0",
    "aiohttp>=3.9.0",
    "PyJWT>=2.8.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Farkhat1984/1C_MCP"
Documentation = "https://github.com/Farkhat1984/1C_MCP#readme"
Repository = "https://github.com/Farkhat1984/1C_MCP.git"
Issues = "https://github.com/Farkhat1984/1C_MCP/issues"
Changelog = "https://github.com/Farkhat1984/1C_MCP/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
    "hypothesis>=6.100.0",
]
local-embeddings = [
    "sentence-transformers>=3.0.0",
]
observability = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]
postgres = [
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
]

[project.scripts]
mcp-1c = "mcp_1c.__main__:main"
mcp-1c-web = "mcp_1c.web:main"
mcp-1c-install-bsl-ls = "mcp_1c.scripts.install_bsl_ls:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_1c"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test stubs frequently take parameters they don't use (mock callbacks,
# fixtures kept for symmetry). Allow ARG/SIM117 noise there — the
# real signal we want from ruff is in production code.
"tests/**/*.py" = ["ARG001", "ARG002", "ARG005", "SIM117"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "lsp: tests requiring a real bsl-language-server jar (slow, gated)",
    "qga: tests requiring the QGA (real ZUP) configuration dump on disk",
    "postgres: tests requiring a live PostgreSQL with pgvector (gated by MCP_PG_DSN)",
]
